--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -12,6 +12,8 @@
 		"paths": {
 			"$": ["./src"],
 			"$/*": ["./src/*"],
+			"$lib": ["./src/lib"],
+			"$lib/*": ["./src/lib/*"],
 			"$styles": ["./src/styles"],
 			"$styles/*": ["./src/styles/*"],
 			"$components": ["./src/components"],
