--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,6 +14,8 @@
 			"$/*": ["./src/*"],
 			"$lib": ["./src/lib"],
 			"$lib/*": ["./src/lib/*"],
+			"$types": ["./src/types"],
+			"$types/*": ["./src/types/*"],
 			"$styles": ["./src/styles"],
 			"$styles/*": ["./src/styles/*"],
 			"$components": ["./src/components"],
