--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,5 +33,8 @@
 		"vite": "^4.3.6",
 		"vitest": "^0.32.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@sveltejs/adapter-node": "^1.0.0-next.106"
+	}
 }
